# ElastoPhi

./: .gitignore  CHEATSHEET.md  CMakeLists.txt  Hmatrix.hpp  README.md  TODO  cluster.hpp  hmatrix.hpp  lrmat.hpp  makefile  matrix.hpp  prog.cpp
doc/: CMakeLists.txt  Doxyfile.in
include/: cluster.hpp  export.hpp  hmatrix.hpp  loading.hpp  lrmat.hpp  lrmat.hpp.orig  matrix.hpp  parametres.hpp  point.hpp  sparsematrix.hpp  user.hpp
latex/logo/: logo_alpines.eps  logo_ifpen.eps  logo_ljll.eps  logo_unice.eps
latex/report/: code.tex  conclusion.tex  elastophi-report.bib  elastophi-report.tex  frontpage.tex  introduction.tex  lowrank.tex  macros.tex  matrix.tex  partitionblocks.tex  results.tex
latex/slides/: compile.sh  expose.tex  logo_anr.eps  macros.tex  texte.tex  titre.tex
output/: normes_vecteurs_Mvprod.txt  output_compression_NEWst_matrice2700FracsV1D1.txt  output_compression_matrice15Fracs.txt  output_compression_matrice2700FracsV1D1.txt  output_compression_matrice2700FracsV2D2.txt  output_compression_matrice3600FracsV1DN1.txt  output_compression_matrice5364FracsTriangles.txt  output_compression_matrice7.txt  output_sparseMatrix_18_08_2016matrice1994Fracs.txt
output/err_decrease_ACA_SVD/: output_err_decrease.txt
output/err_decrease_choice_row/: graphe_output_err_comp_first_row_Xs.eps  graphe_output_err_comp_first_row_Yt.eps  graphe_output_err_comp_first_row_last_row.eps  output_err_decrease_Xs.txt  output_err_decrease_Yt.txt  output_err_decrease_first_row.txt  output_err_decrease_last_row.txt
output/old/: output_compression_matrice2700FracsV1D1.txt  output_compression_matrice2700FracsV2D2.txt  output_compression_matrice2700FracsV3D3.txt  output_compression_matrice3.txt  output_compression_matrice4.txt  output_compression_matrice5.txt  output_compression_matrice7.txt  testsCompressParametresFixesTousMaillages.txt
output/output_matrice1363Fracs/: graphe_compare_output_compression_18_08_2016matrice1363Fracs.eps  graphe_tas_output_compression_18_08_2016matrice1363Fracs.eps  graphe_tmv_output_compression_18_08_2016matrice1363Fracs.eps  output_compression_18_08_2016matrice1363Fracs.txt
output/output_matrice1994Fracs/: graphe_compare_output_compression_18_08_2016matrice1994Fracs.eps  graphe_compasparse_output_compression_18_08_2016matrice1994Fracs.eps  graphe_tas_output_compression_18_08_2016matrice1994Fracs.eps  graphe_tmv_output_compression_18_08_2016matrice1994Fracs.eps  output_compression_18_08_2016matrice1994Fracs.txt
output/output_matrice2700FracsV1D1/: graphe_compare_2_output_compression_18_08_2016matrice2700FracsV1D1_output_compression_18_08_2016matrice2700FracsV3D3.eps  graphe_compare_2_output_compression_18_08_2016matrice2700FracsV1D1_output_compression_18_08_2016matrice3600FracsV1DN1.eps  graphe_compare_output_compression_18_08_2016matrice2700FracsV1D1.eps  graphe_tas_output_compression_18_08_2016matrice2700FracsV1D1.eps  graphe_tmv_output_compression_18_08_2016matrice2700FracsV1D1.eps  output_compression_18_08_2016matrice2700FracsV1D1.txt
output/output_matrice2700FracsV2D2/: graphe_compare_output_compression_18_08_2016matrice2700FracsV2D2.eps  graphe_tas_output_compression_18_08_2016matrice2700FracsV2D2.eps  graphe_tmv_output_compression_18_08_2016matrice2700FracsV2D2.eps  output_compression_18_08_2016matrice2700FracsV2D2.txt
output/output_matrice2700FracsV3D3/: graphe_compare_2_output_compression_18_08_2016matrice2700FracsV3D3_output_compression_18_08_2016matrice3600FracsV1DN1.eps  graphe_compare_output_compression_18_08_2016matrice2700FracsV3D3.eps  graphe_tas_output_compression_18_08_2016matrice2700FracsV3D3.eps  graphe_tmv_output_compression_18_08_2016matrice2700FracsV3D3.eps  output_compression_18_08_2016matrice2700FracsV3D3.txt
output/output_matrice3600FracsV1DN1/: graphe_compare_output_compression_18_08_2016matrice3600FracsV1DN1.eps  graphe_compasparse_output_compression_18_08_2016matrice3600FracsV1DN1.eps  graphe_tas_output_compression_18_08_2016matrice3600FracsV1DN1.eps  graphe_tmv_output_compression_18_08_2016matrice3600FracsV1DN1.eps  output_compression_18_08_2016matrice3600FracsV1DN1.txt  output_sparseMatrix_18_08_2016matrice3600FracsV1DN1.txt  sometimes_matrice3600FracsV1DN1.txt
output/output_matrice3600FracsV2DN2/: graphe_compare_output_compression_18_08_2016matrice3600FracsV2DN2.eps  (+5 more)
postprocessing/: graphe_output_compare_2.py  graphes_output_compare.py  graphes_output_compasparse.py  graphes_output_compression.py  graphes_output_err_decrease.py  graphes_output_err_decrease_comp.py  graphes_output_local_compression.py  graphes_output_tas_comp.py  graphes_output_tmv_comp.py
src/: CMakeLists.txt  CMakeLists.txt.orig  cluster.hpp  comparison_sparse.cpp  compress.cpp  err_decrease.cpp  export.hpp  hmatrix.hpp  loading.hpp  lrmat.hpp  matrix.hpp  multi_compress.cpp  point.hpp  prog.cpp  test_ACA.cpp  visualization.cpp  visucluster.cpp  visumatrix.cpp  visumesh.cpp
test/: CMakeLists.txt  test_ACA.cpp  test_algebra.cpp  test_cluster.cpp  test_hmatrix.cpp  test_lrmatrix.cpp
(+20 files in other folders)
